--- a/.github/actions/consentManagementIntegTests/action.yml
+++ b/.github/actions/consentManagementIntegTests/action.yml
@@ -97,7 +97,8 @@ runs:
           exit 1
         fi
         createConsentApiResponseBody=$(echo ${createConsentApiResponse} | jq '.body')
-        returnedConsentId=$(echo ${createConsentApiResponseBody} | sed 's/\\"/"/g' | sed 's/^"//;s/"$//' | jq .consentId)
+        returnedConsentId=$(echo ${createConsentApiResponseBody} | sed 's/\\"/"/g' | sed 's/^"//;s/"$//' | \
+          jq .consentId --raw-output)
         if [ -n "$returnedConsentId" ]; then
           echo "CreateServiceUserConsent API validation passed: successfully returned consentId ${returnedConsentId}"
         else
@@ -113,13 +114,14 @@ runs:
         API_GATEWAY_ID: ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }}
         AWS_REGION: ${{ inputs.aws-region }}
         CONSENT_API_RESOURCE_ID: ${{ steps.get-consent-management-api-resource-ids.outputs.CONSENT_API_RESOURCE_ID }}
+        CREATED_CONSENT_ID: ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}
       run: |
         getConsentApiResponse=$(aws apigateway test-invoke-method \
           --region "$AWS_REGION" \
           --rest-api-id "$API_GATEWAY_ID" \
           --resource-id "$CONSENT_API_RESOURCE_ID" \
           --http-method GET \
-          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents/${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}")
+          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents/${CREATED_CONSENT_ID}")
         if [ "$(echo "${getConsentApiResponse}" | jq -e '.status == 200')" == "true" ]; then
           echo "GetServiceUserConsent API invocation succeeded"
         else
@@ -133,8 +135,8 @@ runs:
           echo "GetServiceUserConsent API response body: ${getConsentApiResponse}"
           exit 1
         fi
-        if [ "$(echo "${returnedConsentData}" | jq '.consentId == ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}')" != "true" ]; then
-          echo "GetServiceUserConsent API validation failed: consent data did not match expected consentId ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}"
+        if [ "$(echo "${returnedConsentData}" | jq --arg expectedConsentId "$CREATED_CONSENT_ID" '.consentId == $expectedConsentId')" != "true" ]; then
+          echo "GetServiceUserConsent API validation failed: consent data did not match expected consentId ${CREATED_CONSENT_ID}"
           echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
           exit 1
         fi
@@ -166,13 +168,14 @@ runs:
         API_GATEWAY_ID: ${{ steps.get-consent-management-api-gateway-id.outputs.CONSENT_MANAGEMENT_API_GATEWAY_ID }}
         AWS_REGION: ${{ inputs.aws-region }}
         CONSENT_API_RESOURCE_ID: ${{ steps.get-consent-management-api-resource-ids.outputs.CONSENT_API_RESOURCE_ID }}
+        CREATED_CONSENT_ID: ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}
       run: |
         updateConsentApiResponse=$(aws apigateway test-invoke-method \
           --region "$AWS_REGION" \
           --rest-api-id "$API_GATEWAY_ID" \
           --resource-id "$CONSENT_API_RESOURCE_ID" \
           --http-method POST \
-          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents/${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}" \
+          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents/${CREATED_CONSENT_ID}" \
           --body "{\"status\":\"ACTIVE\",\"consentVersion\":2,\"consentData\":{\"testKey1\":\"testValue1_v2\",\"testKey3\":\"testValue3\"}}")
         if [ "$(echo "${updateConsentApiResponse}" | jq -e '.status == 200')" == "true" ]; then
           echo "UpdateServiceUserConsent API invocation succeeded"
@@ -185,7 +188,7 @@ runs:
           --rest-api-id "$API_GATEWAY_ID" \
           --resource-id "$CONSENT_API_RESOURCE_ID" \
           --http-method GET \
-          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents/${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}")
+          --path-with-query-string "v1/consent-management/services/TestServiceId/users/TestUserId/consents/${CREATED_CONSENT_ID}")
         if [ "$(echo "${getConsentApiResponse}" | jq -e '.status == 200')" == "true" ]; then
           echo "GetServiceUserConsent API invocation succeeded"
         else
@@ -199,8 +202,8 @@ runs:
           echo "GetServiceUserConsent API response body: ${getConsentApiResponse}"
           exit 1
         fi
-        if [ "$(echo "${returnedConsentData}" | jq '.consentId == ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}')" != "true" ]; then
-          echo "GetServiceUserConsent API validation after update failed: consent data did not match expected consentId ${{ steps.create-service-user-consent.outputs.CREATED_CONSENT_ID }}"
+        if [ "$(echo "${returnedConsentData}" | jq --arg expectedConsentId "$CREATED_CONSENT_ID" '.consentId == $expectedConsentId')" != "true" ]; then
+          echo "GetServiceUserConsent API validation after update failed: consent data did not match expected consentId ${CREATED_CONSENT_ID}"
           echo "GetServiceUserConsent API response consent data: ${returnedConsentData}"
           exit 1
         fi
