--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.12.7",
-    "aws-cdk": "~2.1031.1",
+    "@types/node": "^22.7.9",
+    "aws-cdk": "~2.1031.2",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.6",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "~2.221",
+    "aws-cdk-lib": "~2.224",
     "cdk-monitoring-constructs": "^9.16.0",
     "constructs": "^10.4.2"
+  },
+  "overrides": {
+    "js-yaml": "^4.1.1"
   }
 }
